# RomanNumeralCalculator

./: Makefile  Makefile.am  Makefile.in  README  RomanNumeralCalculator  RomanNumeralCalculator.c  RomanNumeralCalculator.h  RomanNumeralCalculatorMakeFile  Test_Code.c  aclocal.m4  check_RomanNumeralCalculator  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libRomanNumeralCalculator-1.0.la  libtool  testReadme
.libs/: RomanNumeralCalculator  check_RomanNumeralCalculator  libRomanNumeralCalculator-1.0.la  libRomanNumeralCalculator-1.0.lai  libRomanNumeralCalculator-1.0.so.0  libRomanNumeralCalculator-1.0.so.0.0.0  lt-RomanNumeralCalculator  lt-check_RomanNumeralCalculator
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
src/: RomanNumeralCalculator.c  RomanNumeralCalculator.h  RomanNumeralCalculator.lo  main.c  main.lo
src/.deps/: RomanNumeralCalculator-RomanNumeralCalculator.Po  RomanNumeralCalculator-main.Po  RomanNumeralCalculator.Plo  main.Plo
test/: check_RomanNumeralCalculator.c
test/.deps/: check_RomanNumeralCalculator-check_RomanNumeralCalculator.Po
